# shopping-cart-wasm-demo

./: .gitattributes  .gitignore  README.md  docker-compose.yaml  flake.nix
ansible/: Makefile  deploy-carts-java.yml  deploy-cert-manager.yml  deploy-kepler.yml  deploy-metrics-server.yml  deploy-postgres.yml  deploy-prometheus.yml  deploy-spin-kube.yml  deploy-traefik.yml  deploy-wasmcloud.yml  python-requirements.txt
ansible/properties/: properties.yml
cart-fe/: package.json
carts-java/: Dockerfile  Makefile  README.md  pom.xml
carts-java/api-spec/: carts.json
compose/: migration.yaml
golang/: .dockerignore  Dockerfile  config.go  controller.go  go.mod  k8s.yaml  main.go
k8s/: cart-ingress.yaml  carts-java-ingress.yaml  deployment-carts-java.yaml  deployment-spin-demo.yaml  ingress-grafana.yml  ingress-java.yml  ingress-wasm.yml  lb-service.yml
k8s/pgbouncer/: README.md  values.yaml
k8s/postgres/: configmaps-liquibase-changelog-dev.yml  configmaps-liquibase-changelog.yml  liquibase-job.yml  readme.md  values.yml
k8s/wasmcloud-app/: readme.md  wadm.yaml
order-fe/: package-lock.json
spin-demo/: Cargo.toml  cart-api.yaml  package-lock.json  spin-dev.toml  spin.toml
spin-demo/carts/: Cargo.toml
spin-demo/carts-go/: controller.go  go.mod  main.go
spin-demo/carts-rs/: Cargo.toml
spin-demo/carts-rs/src/: lib.rs
spin-demo/carts-ts/: package-lock.json  package.json
spin-demo/order-be/: Cargo.toml
spin-demo/src/: lib.rs
terraform/bootstrap/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  (+2 more)
wasmcloud-demo/: Cargo.toml  wadm.yaml
(+44 files in other folders)
