[package]
name = "carts-rs"
authors = ["Christian Speckner <christian.speckner@mayflower.de>"]
description = "/carts-rs/{customerId}"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.96"
spin-sdk = "3.0.1"
url = "2.5.2"
urlpattern = "^0.2.0"

[workspace]
